--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <title>Mi Portafolio personal</title>
 </head>
 <body>
-    <h1> Mi Portafolio, Ángel Santiago Pou Mápula</h1>
+    <h1> Mi Portafolio <br> 
+        Ángel Santiago Pou Mápula</h1>
 </body>
 </html>
