--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Mi Portafolio personal</title>
 </head>
 <body>
-    <h1> Mi Portafolio <br> 
-        Ángel Santiago Pou Mápula</h1>
+    <h1 style="text-align: ;"> Mi Portafolio</h1> <br>
+    <h2>Nombre: Ángel Santiago Pou Mápula</h2> <br>
+    <h3>Materia: Desarrolla aplicaciones web que se ejecuten al servidor</h3> <br>
+    <img style="border: 2px solid red; border-radius: 50px;" src="img.jpg" alt="" width="20%">
+
+    <a href="">PORTAFOLIO PARCIAL 1</a>
 </body>
 </html>
