--- a/index.html
+++ b/index.html
@@ -3,39 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prácticas Parcial #1</title>
+    <title>Mi Portafolio personal</title>
 </head>
 <body>
-    <table>
-        <thead style="border: 3px solid black;">
-            <tr>
-                <th>Nombre de la práctica</th>
-                <th>Descripción</th>
-                <th>Hipervínculo</th>
-            </tr>
-        </thead>
-        <tbody style="border: 3px solid black;">
-            <tr>
-                <td>Práctica #1</td>
-                <td>Elementos básicos de HTML parte 1</td>
-                <td><a href="Parcial1/Practica1_Elementos_HTML_Parte1.html">Ir a la práctica</a></td>
-            </tr>
-            <tr>
-                <td>Práctica #2</td>
-                <td>Elementos básicos de HTML parte 2</td>
-                <td><a href="Parcial1/Practica2.html">Ir a la práctica</a></td>
-            </tr>
-            <tr>
-                <td>Práctica #3</td>
-                <td>Elementos básicos de HTML y propiedades CSS</td>
-                <td><a href="Parcial1/Practica3.html">Ir a la práctica</a></td>
-            </tr>
-            <tr>
-                <td>Práctica #4</td>
-                <td>Manejo de imágenes en HTML</td>
-                <td><a href="Parcial1/Proyecto del Pou/Practica4.html">Ir a la práctica</a></td>
-            </tr>
-        </tbody>
-    </table>
+    <h1 style="text-align: ;"> Mi Portafolio</h1> <br>
+    <h2>Nombre: Ángel Santiago Pou Mápula</h2> <br>
+    <h3>Materia: Desarrolla aplicaciones web que se ejecuten al servidor</h3> <br>
+    <img style="border: 2px solid red; border-radius: 50px;" src="img.jpg" alt="" width="20%"> <br>
+
+    <a href="">PORTAFOLIO PARCIAL 1</a>
 </body>
 </html>
