--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h3>Materia: Desarrolla aplicaciones web que se ejecuten al servidor</h3> <br>
     <img style="border: 2px solid red; border-radius: 50px;" src="img.jpg" alt="" width="20%"> <br>
 
-    <a href="Parcial1/PracticasParcial1.html">PORTAFOLIO PARCIAL 1</a>
+    <a href="PracticasParcial1.html">PORTAFOLIO PARCIAL 1</a>
 </body>
 </html>
