--- a/PracticasParcial1.html
+++ b/PracticasParcial1.html
@@ -33,7 +33,7 @@
             <tr>
                 <td>Práctica #4</td>
                 <td>Manejo de imágenes en HTML</td>
-                <td><a href="Parcial1/Proyecto del Pou/Practica4.html">Ir a la práctica</a></td>
+                <td><a href="Parcial1/Practica4.html">Ir a la práctica</a></td>
             </tr>
         </tbody>
     </table>
