--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 style="text-align: ;"> Mi Portafolio</h1> <br>
     <h2>Nombre: Ángel Santiago Pou Mápula</h2> <br>
     <h3>Materia: Desarrolla aplicaciones web que se ejecuten al servidor</h3> <br>
-    <img style="border: 2px solid red; border-radius: 50px;" src="img.jpg" alt="" width="20%"> <br>
+    <img style="border: 2px solid red; border-radius: 50px;" src="img.jpeg" alt="" width="20%"> <br>
 
     <a href="PracticasParcial1.html">PORTAFOLIO PARCIAL 1</a>
 </body>
