--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Mi Portafolio personal</title>
 </head>
 <body>
-    <h1 style="text-align: ;"> Mi Portafolio</h1> <br>
-    <h2>Nombre: Ángel Santiago Pou Mápula</h2> <br>
-    <h3>Materia: Desarrolla aplicaciones web que se ejecuten al servidor</h3> <br>
-    <img style="border: 2px solid red; border-radius: 50px;" src="img.jpeg" alt="" width="20%"> <br>
+    <center><h1 style="text-align: ;"> Mi Portafolio</h1></center> <br>
+    <center><h2>Nombre: Ángel Santiago Pou Mápula</h2></center> <br>
+    <center><h3>Materia: Desarrolla aplicaciones web que se ejecuten al servidor</h3></center> <br>
+    <center><img style="border: 2px solid red; border-radius: 50px;" src="img.jpeg" alt="" width="20%"></center> <br>
 
     <a href="PracticasParcial1.html">PORTAFOLIO PARCIAL 1</a>
 </body>
