--- a/PracticasParcial1.html
+++ b/PracticasParcial1.html
@@ -35,6 +35,11 @@
                 <td>Manejo de imágenes en HTML</td>
                 <td><a href="Parcial1/Practica4.html">Ir a la práctica</a></td>
             </tr>
+            <tr>
+                <td>Práctica #5</td>
+                <td>Manejo de tablas en HTML</td>
+                <td><a href="Parcial1/Practica4.html">Ir a la práctica</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
