--- a/PracticasParcial1.html
+++ b/PracticasParcial1.html
@@ -36,9 +36,14 @@
                 <td><a href="Parcial1/Practica4.html">Ir a la práctica</a></td>
             </tr>
             <tr>
-                <td>Práctica #5</td>
+                <td>Práctica #5</td>    Parcial1/Practica6.html
                 <td>Manejo de tablas en HTML</td>
                 <td><a href="Parcial1/Practica5.html">Ir a la práctica</a></td>
+            </tr>
+            <tr>
+                <td>Práctica #6</td>
+                <td>Formularios en HTML</td>
+                <td><a href="Parcial1/Practica6.html">Ir a la práctica</a></td>
             </tr>
         </tbody>
     </table>
