--- a/PracticasParcial1.html
+++ b/PracticasParcial1.html
@@ -41,9 +41,14 @@
                 <td><a href="Parcial1/Practica5.html">Ir a la práctica</a></td>
             </tr>
             <tr>
-                <td>Práctica #6</td>
+                <td>Práctica #6</td> 
                 <td>Formularios en HTML</td>
                 <td><a href="Parcial1/Practica6.html">Ir a la práctica</a></td>
+            </tr>
+            <tr>
+                <td>Práctica #7</td> 
+                <td>Posicionamiento en HTML</td>
+                <td><a href="Parcial1/Practica7.html">Ir a la práctica</a></td>
             </tr>
         </tbody>
     </table>
