--- a/PracticasParcial1.html
+++ b/PracticasParcial1.html
@@ -50,6 +50,11 @@
                 <td>Posicionamiento en HTML</td>
                 <td><a href="Parcial1/Practica7.html">Ir a la práctica</a></td>
             </tr>
+            <tr>
+                <td>Práctica #8</td> 
+                <td>Juego de loteria</td>
+                <td><a href="Parcial1/Practica8.html">Ir a la práctica</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
