--- a/PracticasParcial1.html
+++ b/PracticasParcial1.html
@@ -55,6 +55,11 @@
                 <td>Juego de loteria</td>
                 <td><a href="Parcial1/Practica8.html">Ir a la práctica</a></td>
             </tr>
+            <tr>
+                <td>Práctica #9</td> 
+                <td>Manejo de CSS</td>
+                <td><a href="Parcial1/Practica9.html">Ir a la práctica</a></td>
+            </tr>
         </tbody>
     </table>
 </body>
