--- a/PracticasParcial1.html
+++ b/PracticasParcial1.html
@@ -56,9 +56,14 @@
                 <td><a href="Parcial1/Practica8.html">Ir a la práctica</a></td>
             </tr>
             <tr>
-                <td>Práctica #9</td> 
+                <td>Práctica #9</td> Parcial1/Practica10.html
                 <td>Manejo de CSS</td>
                 <td><a href="Parcial1/Practica9.html">Ir a la práctica</a></td>
+            </tr>
+            <tr>
+                <td>Práctica #10</td> 
+                <td>CSS parte 2</td>
+                <td><a href="Parcial1/Practica10.html">Ir a la práctica</a></td>
             </tr>
         </tbody>
     </table>
