--- a/Parcial1/Practica4.html
+++ b/Parcial1/Practica4.html
@@ -6,7 +6,9 @@
     <title>Práctica #4 Manejo de imágenes en HTML</title>
 </head>
 <body>
-    <h1>Manejo de imágenes en HTML</h1><hr>
+    <h1>Manejo de imágenes en HTML</h1><br>
+    <h1>Angel Santiago Pou Mapula</h1>
+    <hr>
     <img src="lol.jpg" alt="">
 </body>
 </html>
