--- a/Parcial1/Practica8.html
+++ b/Parcial1/Practica8.html
@@ -6,7 +6,9 @@
     <title>Juego de loteria</title>
 </head>
 <body>
-    <h1>Juego de loteria</h1><hr>
+    <h1>Juego de loteria</h1><br>
+    <h1>Angel Santiago Pou Mapula</h1>
+    <hr>
     <div style="border: 1px solid black; width: auto; float: left; margin: 1%;">
         <table border="1">
             <tr>
