--- a/Parcial1/Practica9.html
+++ b/Parcial1/Practica9.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Manejo de CSS</h1>
     <p class="parrafo">
-        El temach es mi pastor y nada me faltará
+        Angel Santiago Pou Mapula
     </p>
     <div>
         div for example
