--- a/Parcial1/Practica10.html
+++ b/Parcial1/Practica10.html
@@ -11,7 +11,7 @@
     <input type="text" id="boton"><br><br>
     <input type="submit" id="boton"><br><br>
     <span>
-        El temach es mi castor
+        Angel Santiago Pou Mapula
     </span><br><br>
     <div class="texto">
         yessir 
