--- a/PracticasParcial1.html
+++ b/PracticasParcial1.html
@@ -6,7 +6,7 @@
     <title>Prácticas Parcial #1</title>
 </head>
 <body>
-    <table>
+    <table border="1">
         <thead style="border: 3px solid black;">
             <tr>
                 <th>Nombre de la práctica</th>
@@ -36,7 +36,7 @@
                 <td><a href="Parcial1/Practica4.html">Ir a la práctica</a></td>
             </tr>
             <tr>
-                <td>Práctica #5</td>    Parcial1/Practica6.html
+                <td>Práctica #5</td> 
                 <td>Manejo de tablas en HTML</td>
                 <td><a href="Parcial1/Practica5.html">Ir a la práctica</a></td>
             </tr>
@@ -56,7 +56,7 @@
                 <td><a href="Parcial1/Practica8.html">Ir a la práctica</a></td>
             </tr>
             <tr>
-                <td>Práctica #9</td> Parcial1/Practica10.html
+                <td>Práctica #9</td> 
                 <td>Manejo de CSS</td>
                 <td><a href="Parcial1/Practica9.html">Ir a la práctica</a></td>
             </tr>
