--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi pagina de Bodega Aurrera</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery-3.7.1.js"></script>
 </head>
 <body>
     Esta es mi pagina de Bodega Aurrera
+
+    <script src="js/bootstrap.js"></script>
 </body>
 </html>
