--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     Esta es mi pagina de Bodega Aurrera
+      <div style="background-color: yellow;height: 70px; ">
+        <br>
+            <p style="text-align: center;">Te invitamos a conocer la actualización de nuestro 
+            Aviso de Privacidad y Términos y Condiciones para brindarte una mejor experiencia.  
+            <u>Conoce más</u></p> 
+    </div>
 
     <script src="js/bootstrap.js"></script>
 </body>
