--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi pagina de Bodega Aurrera</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="estilos.css">
     <script src="js/jquery-3.7.1.js"></script>
 </head>
 <body>
-    Esta es mi pagina de Bodega Aurrera
+   
       <div style="background-color: yellow;height: 70px; ">
         <br>
             <p style="text-align: center;">Te invitamos a conocer la actualización de nuestro 
@@ -50,6 +51,26 @@
           </div>
         </div>
       </nav>
+       <div style="background-color: darkgreen;">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link white" href="#">Moda</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link white" href="#">Feria del Videojuego</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link white" href="#">Dia de los Muertos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link white" href="#">Ola de Calor</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link white" href="#">Ayuda</a>
+          </li>
+          
+        </ul>
+      </div>
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
