--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -17,37 +17,31 @@
             <u>Conoce más</u></p> 
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+        <div class="container-fluid" style="background-color: green;">
             <div style="border-radius:50px ;">
           <img src="Img Aurrera/logoaorrera.jpg" class="navbar-brand" href="#" >
           </div>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#" style="color: white; background-color: rgb(54, 119, 0); border-radius: 10px; margin: 5px;"><img src="Img Aurrera/cua.jpg" alt="" style="width: 20px; height: 20px;">  Departamentos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="#" style="color: white; background-color: rgb(54, 119, 0); border-radius: 10px; margin: 5px;"><img src="Img Aurrera/cir.jpg" alt="" style="width: 20px; height: 20px;">Servicios</a>
               </li>
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <input type="search" aria-label="Buscar" aria-activedescendant="" class="flex-auto lh-solid sans-serif search-bar br-pill f5 b--none" name="q" placeholder="Buscar en Bodega Aurrera" style="padding-left: 1.5rem; padding-right: 2.5rem;" aria-autocomplete="list" aria-haspopup="listbox" autocomplete="off" value="" data-automation-id="header-input-search">
+              <button class="btn btn-outline-success" type="submit" style="width: 50px; background-color: rgb(255, 187, 0); "><img src="Img Aurrera/lup.jpg" alt="" style="width: 20px; height: 20px;"></button>
             </form>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#" style="color: white; background-color: rgb(54, 119, 0); border-radius: 10px; margin: 5px;"><img src="Img Aurrera/mit.jpg" alt="" style="width: 20px; height: 20px;">Inicio de sesion</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" style="color: white; background-color: rgb(54, 119, 0); border-radius: 10px; margin: 5px;"><img src="Img Aurrera/car.jpg" alt="" style="width: 35px; height: 30px;"></a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
