--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -9,11 +9,10 @@
     <script src="js/jquery-3.7.1.js"></script>
 </head>
 <body>
-   
-      <div style="background-color: yellow;height: 70px; ">
+      <div style="background-color: rgb(255, 187, 0);height: 70px; margin: 0%;">
         <br>
-            <p style="text-align: center;">Te invitamos a conocer la actualización de nuestro 
-            Aviso de Privacidad y Términos y Condiciones para brindarte una mejor experiencia.  
+            <p style="text-align: center;"><b>Te invitamos a conocer la actualización de nuestro 
+            Aviso de Privacidad y Términos y Condiciones para brindarte una mejor experiencia.</b>  
             <u>Conoce más</u></p> 
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
