--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -44,7 +44,7 @@
           </div>
         </div>
       </nav>
-       <div style="background-color: darkgreen;">
+       <div style="background-color: darkgreen;margin: 0%;">
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link white" href="#">Moda</a>
