--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -9,14 +9,14 @@
     <script src="js/jquery-3.7.1.js"></script>
 </head>
 <body>
-      <div style="background-color: rgb(255, 187, 0);height: 70px; margin: 0%;">
+      <div style="background-color: rgb(255, 187, 0);height: 60px; margin: 0%;">
         <br>
             <p style="text-align: center;"><b>Te invitamos a conocer la actualización de nuestro 
             Aviso de Privacidad y Términos y Condiciones para brindarte una mejor experiencia.</b>  
             <u>Conoce más</u></p> 
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid" style="background-color: green;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding: 0;">
+        <div class="container-fluid" style="background-color: green; height: 90px;">
             <div style="border-radius:50px ;">
           <img src="Img Aurrera/logoaorrera.jpg" class="navbar-brand" href="#" >
           </div>
@@ -30,7 +30,7 @@
               </li>
             </ul>
             <form class="d-flex">
-              <input type="search" aria-label="Buscar" aria-activedescendant="" class="flex-auto lh-solid sans-serif search-bar br-pill f5 b--none" name="q" placeholder="Buscar en Bodega Aurrera" style="padding-left: 1.5rem; padding-right: 2.5rem;" aria-autocomplete="list" aria-haspopup="listbox" autocomplete="off" value="" data-automation-id="header-input-search">
+              <input type="search" aria-label="Buscar" aria-activedescendant="" class="flex-auto lh-solid sans-serif search-bar br-pill f5 b--none" name="q" placeholder="Buscar en Bodega Aurrera" style="padding-left: 1.5rem; padding-right: 2.5rem; border-radius: 20px; width: 500px;" aria-autocomplete="list" aria-haspopup="listbox" autocomplete="off" value="" data-automation-id="header-input-search">
               <button class="btn btn-outline-success" type="submit" style="width: 50px; background-color: rgb(255, 187, 0); "><img src="Img Aurrera/lup.jpg" alt="" style="width: 20px; height: 20px;"></button>
             </form>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -64,6 +64,7 @@
           
         </ul>
       </div>
+      <div class="imgau"><img src="Img Aurrera/Captura de pantalla 2024-05-12 223749.png" alt=""></div>
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
