--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -64,7 +64,7 @@
           
         </ul>
       </div>
-      <div class="imgau"><img src="Img Aurrera/Captura de pantalla 2024-05-12 223749.png" alt=""></div>
+      <div class="imgau"><img src="Img Aurrera/Portada.png" alt=""></div>
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
