--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <center><img style="border: 2px solid red; border-radius: 50px;" src="img.jpeg" alt="" width="20%"></center> <br>
 
     <a href="PracticasParcial1.html">PORTAFOLIO PARCIAL 1</a>
+    <a href="PracticasParcial2.html">PORTAFOLIO PARCIAL 2</a>
 </body>
 </html>
