--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 
     <a href="PracticasParcial1.html">PORTAFOLIO PARCIAL 1</a>
     <a href="PracticaParcial2.html">PORTAFOLIO PARCIAL 2</a>
+    <a href="PracticaParcial2.html">PROYECTO PARCIAL 2</a>
 </body>
 </html>
