--- a/BodegaAurrera/index.html
+++ b/BodegaAurrera/index.html
@@ -6,10 +6,21 @@
     <title>Mi pagina de Bodega Aurrera</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="estilos.css">
+    <style>
+      @media (max-width: 768px) {
+          .navbar {
+              height: auto; 
+          }
+          .imgau img {
+              max-width: 100%; 
+              height: auto;
+          }
+      }
+    </style>
     <script src="js/jquery-3.7.1.js"></script>
 </head>
 <body>
-      <div style="background-color: rgb(255, 187, 0);height: 60px; margin: 0%;">
+      <div style="background-color: rgb(255, 187, 0);height: 60px; margin: 0%;>
         <br>
             <p style="text-align: center;"><b>Te invitamos a conocer la actualización de nuestro 
             Aviso de Privacidad y Términos y Condiciones para brindarte una mejor experiencia.</b>  
