--- a/Parcial3/ProyectoFinal/index.html
+++ b/Parcial3/ProyectoFinal/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto final parcial #3</title>
+    <title>Proyecto Final Parcial #3</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery-3.7.1.js"></script>
 </head>
 <body>
-    Ángel Pou
+    <div class="container">
+        <h1>Proyecto Final Parcial #3</h1>
+        <div class="row mt-2">
+            <div class="col">
+                <h3 class="card">SELECT * FROM alumno;</h3>
+                <p>Consulta #1. Obtener el listado de todos los alumnos en la Facultad.</p>
+                <img src="Consulta1.png" alt="" class="img-fluid">
+            </div> <br>
+            <div class="col">
+                <h3 class="card">
+                    SELECT curso.nombreDescriptivo, asignatura.nombre <br>
+                    FROM curso <br>
+                    INNER JOIN asignatura <br>
+                    ON curso.idCurso = asignatura.curso;
+                </h3>
+                <p>Consulta #2. Obtener el listado de los cursos(nombres) y su asignatura correspondiente.</p>
+                <img src="Consulta2.png" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
+    <script src="js/bootstrap.js"></script>
 </body>
 </html>
